# GenWeights

./: .gitignore  CMakeLists.txt  FindANN.cmake  GNUmakefile  README.md
src/: DistUtils.h  Test.cpp
